--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-1. install node.js
+1. Install the 'node.js'
 
-2. open console and execute "node app.js"
+2. Open new console and execute "node app.js"
 
-3. go to "http://localhost:3000"
+3. Let's meet at "http://localhost:3000"
