--- a/README
+++ b/README
@@ -3,3 +3,6 @@
 2. Open new console and execute "node app.js"
 
 3. Let's meet at "http://localhost:11000"
+
+--- using node module --- 
+npm install node-uuid
