--- a/README
+++ b/README
@@ -1,8 +1,1 @@
-1. Install the 'node.js'
-
-2. Open new console and execute "node app.js"
-
-3. Let's meet at "http://localhost:11000"
-
---- using node module --- 
-npm install node-uuid
+INSTALLATION IS YOUR RESPONSIBILITY, YOUR ABILITY ADN YOUR AUTHORIZATION
